--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
 
   flutter:
     sdk: flutter
+  intl: ^0.20.1
 
 dev_dependencies:
   # The "flutter_lints" package below contains a set of recommended lints to
