--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,11 @@ dependencies:
   flutter_datetime_picker_plus: ^2.2.0
   flutter_localizations:
     sdk: flutter
+  flutter_riverpod: ^2.6.1
+  freezed: ^2.5.7
+  freezed_annotation: ^2.4.4
   intl: ^0.20.1
+  riverpod_annotation: ^2.6.1
 
 dev_dependencies:
   # The "flutter_lints" package below contains a set of recommended lints to
@@ -45,11 +49,16 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
+  build_runner: ^2.4.14
+  custom_lint: ^0.7.0
   flutter_lints: ^4.0.0
 
   flutter_test:
     sdk: flutter
 
+  json_serializable: ^6.9.0
+  riverpod_generator: ^2.6.3
+  riverpod_lint: ^2.6.3
   very_good_analysis: ^7.0.0
 
 # For information on the generic Dart part of this file, see the
