--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,9 @@ dependencies:
   freezed: ^2.5.7
   freezed_annotation: ^2.4.4
   intl: ^0.20.1
+  path: ^1.9.0
   riverpod_annotation: ^2.6.1
+  sqflite: ^2.4.1
 
 dev_dependencies:
   # The "flutter_lints" package below contains a set of recommended lints to
