--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-  "dart.flutterSdkPath": ".fvm/versions/3.27.1"
+  "dart.flutterSdkPath": ".fvm/versions/3.27.1",
+  // Fix for https://github.com/flutter/flutter/issues/160442
+  // TODO: Remove this line the issue is fixed
+  "dart.flutterRunAdditionalArgs": ["--no-enable-impeller"]
 }
