--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   path: ^1.9.0
   riverpod_annotation: ^2.6.1
   sqflite: ^2.4.1
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   # The "flutter_lints" package below contains a set of recommended lints to
