--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   freezed: ^2.5.7
   freezed_annotation: ^2.4.4
   intl: ^0.20.1
+  introduction_screen: ^3.1.14
   path: ^1.9.0
   riverpod_annotation: ^2.6.1
   sqflite: ^2.4.1
@@ -78,9 +79,8 @@ flutter:
   generate: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/test.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
