--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -80,7 +80,12 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/test.png
+    - assets/images/first_tutorial_ja.gif
+    - assets/images/second_tutorial_ja.gif
+    - assets/images/third_tutorial_ja.gif
+    - assets/images/first_tutorial_en.gif
+    - assets/images/second_tutorial_en.gif
+    - assets/images/third_tutorial_en.gif
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
