Update the app id

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 android {
-    namespace = "com.example.life_battery"
+    namespace = "com.rururu.lifebt"
     compileSdk = flutter.compileSdkVersion
     /*
         Fix this issue by using the highest Android NDK version from 「ndkVersion = flutter.ndkVersion」 to 「ndkVersion = "27.0.12077973"」 (they are backward compatible).
@@ -36,7 +36,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId = "com.example.life_battery"
+        applicationId = "com.rururu.lifebt"
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
         minSdk = flutter.minSdkVersion
