--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_riverpod: ^2.6.1
   freezed: ^3.0.6
   freezed_annotation: ^3.0.0
+  in_app_review: ^2.0.10
   intl: ^0.20.2
   introduction_screen: ^3.1.14
   path: ^1.9.1
