--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,5 @@
 {
   "dart.flutterSdkPath": ".fvm/versions/3.32.5",
-  "dart.flutterRunAdditionalArgs": [
-    "--no-enable-impeller"
-  ]
+  "dart.flutterRunAdditionalArgs": ["--no-enable-impeller"],
+  "editor.formatOnSave": true
 }
