--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
   "dart.flutterSdkPath": ".fvm/versions/3.32.5",
   "dart.flutterRunAdditionalArgs": ["--no-enable-impeller"],
-  "editor.formatOnSave": true
+  "editor.formatOnSave": true,
+  "editor.codeActionsOnSave": {
+    "source.fixAll": "always"
+  }
 }
