chore: Hide generated g files in VS Code

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
     "source.organizeImports": "always"
   },
   "files.exclude": {
-    "**/*.freezed.dart": true
+    "**/*.freezed.dart": true,
+    "**/*.g.dart": true
   }
 }
