--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: life_battery
-description: 'A new Flutter project.'
+description: 'Visualize your life remaining as a battery percentage.'
 publish_to: 'none'
 
 version: 2.3.0+16
