--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ publish_to: 'none'
 version: 2.3.0+16
 
 environment:
-  sdk: ^3.5.4
+  sdk: ^3.8.0
 
 dependencies:
   cupertino_icons: ^1.0.8
@@ -20,6 +20,7 @@ dependencies:
   in_app_review: ^2.0.10
   intl: ^0.20.2
   introduction_screen: ^3.1.14
+  json_annotation: ^4.9.0
   path: ^1.9.1
   riverpod_annotation: ^3.0.3
   sqflite: ^2.4.2
